# trifecta

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  shader.wgsl
