[package]
name = "trifecta"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
inline_tweak = "1"
tracing = "0.1"
wgpu = "0.19"
winit = { version = "0.29", features = ["rwh_06"] }
glam = { version = "0.25.0", features = ["bytemuck", "core-simd", "debug-glam-assert"] }
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
tracing-log = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "=0.3.67" # wgpu uses an api that is changed in web-sys > 0.3.67, so pin it to that

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

